macviews: disable menu mnemonics

These aren't used in Mac apps. They aren't *shown* in MacViews, but they were
still used, which meant that trying to prefix search could instead activate
an item by mnemonic.

Test: Manual
1) Open the app menu
2) Press "N"
Before this CL, "New Window" is activated; after it, "New Tab" is
prefix-selected.

Bug: 836964
Change-Id: Id672a1e17589e3ebd09e6bff473341947bd2df2a
Reviewed-on: https://chromium-review.googlesource.com/1050305
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#556966}
Former-commit-id: cbc70bf500172632ab61df8122c0b15a91e6edef