chrome/browser/ui/views/menu_controller_interactive_uitest.cc
@@ -5,6 +5,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "base/macros.h"
 #include "base/strings/utf_string_conversions.h"
+#include "build/build_config.h"
 #include "chrome/browser/ui/views/menu_test_base.h"
 #include "ui/views/controls/menu/menu_item_view.h"
 #include "ui/views/controls/menu/submenu_view.h"
@@ -56,7 +57,14 @@ class MenuControllerMnemonicTest : public MenuTestBase {
 typedef MenuControllerMnemonicTest<ui::VKEY_DIVIDE,1>
     MenuControllerMnemonicTestMnemonicMatch;
 
-VIEW_TEST(MenuControllerMnemonicTestMnemonicMatch, MnemonicMatch);
+#if defined(OS_MACOSX)
+// Mnemonics aren't used on macOS.
+#define MAYBE_MnemonicMatch DISABLED_MnemonicMatch
+#else
+#define MAYBE_MnemonicMatch MnemonicMatch
+#endif
+
+VIEW_TEST(MenuControllerMnemonicTestMnemonicMatch, MAYBE_MnemonicMatch);
 
 // Pressing a key which matches the first letter of the menu item's title
 // should execute the command for that menu item.
